# web_automation_ai

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  CONTRIBUTING.md  README.md  app.py  example.json  init_demo_flows.py  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  semantic-pr.yml
.tools/: run-pytest.sh
docs/: 00-structure.md  10-requirements.md  20-architecture.md  30-dsl-spec.md  40-security-secrets.md  50-operations.md  60-roadmap.md  80-team-playbook.md  90-compliance.md  design-patterns-policy.md  kpi-dashboard.md
docs/70-site-profiles/: TEMPLATE.md
docs/diagrams/: diagram-block.md  diagram-class.md  diagram-component.md  diagram-flowchart.md  diagram-gantt.md  diagram-sequence.md  kpi-dashboard.md
experiments/: dsl_parser.py  scenario.json
flows/: demo_download.json  demo_example.json  demo_form.json  demo_login.json  mytokyogas_poc.json  schema.flow.v1.json
planning/: wbs.csv
scripts/: import_wbs_to_project_v2.sh
site_profiles/: MyTokyoGas.md
src/wao/: __init__.py  cli.py  config.py  logging_setup.py  runner.py  schema.json  secrets.py  validator.py
tests/: test_flow_validation.py  test_smoke.py
